--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.profiles.active=db
+
+weixin.baseUrl=https://api.weixin.qq.com/
+mp.appId=wx0c14a6dfeab19166
+mp.secret=02a53bc213a98bb9fa6aae4157fd55eb
