add get check in out location

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.profiles.active=db
 weixin.baseUrl=https://api.weixin.qq.com/
 mp.appId=wx0c14a6dfeab19166
 mp.secret=02a53bc213a98bb9fa6aae4157fd55eb
+
+checkInOut.longitude=45.45
+checkInOut.latitude=56.56
