add user gps to redis when enter in conversation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ weixin.accessToken=18_TJQEYu1XCBSL9ujbsGlKZ-qwOgleNpnmPa8X8tWUzlWooYJCDCEE7NdQxF
 
 checkInOut.longitude=45.45
 checkInOut.latitude=56.56
+
+spring.redis.host=192.168.204.131
