--- a/frontend2/package.json
+++ b/frontend2/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "mint-ui": "^2.2.13",
     "vue": "^2.5.21",
     "vue-router": "^3.0.1"
